# codex-reset-scout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.json
src/codex_reset_scout/: __init__.py  classify.py  cli.py  config.py  credits.py  decision.py  engine.py  local_usage.py  models.py  notify.py  sources.py  state.py
tests/: test_classify.py  test_cli.py  test_config.py  test_credits.py  test_engine.py  test_local_usage.py  test_sources.py  test_state_decision.py
